# smart-data-analyst

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: report_template.html  sample_data.csv  style.css
docs/: 课设报告.docx  课设报告.md
pages/: 01_📊_数据上传.py  02_💬_智能对话.py  03_📄_导出报告.py
scripts/: convert_report.py  generate_report.py
src/: __init__.py  data_loader.py  profiler.py  utils.py
src/export/: __init__.py  html_report.py  pdf_report.py
src/llm/: client.py  code_executor.py  prompts.py
src/viz/: chart_registry.py  renderer.py
tests/: __init__.py  test_chart_registry.py  test_code_executor.py  test_data_loader.py  test_html_report.py  test_profiler.py  test_prompts.py  test_renderer.py
